[project]
name = "dsa_collections"
version = "2.3.1"
description = "collections of data structures and algorithms for learning purposes, with 100% test coverage."
authors = [
    { name = "jackcizon", email = "jack20021213cn@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
coverage = "^7.13.0"
ruff = "^0.14.10"
commitizen = "^4.10.1"
pre-commit = "^4.5.1"
mypy = "^1.19.1"

[tool.poetry]
package-mode = true
packages = [{ include = "dsa_collections" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.mypy]
python_version = "3.12"
files = ["dsa_collections"]

check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

no_implicit_optional = true
strict_optional = true

ignore_missing_imports = true
disable_error_code = ["union-attr", "assignment"]
